test/samples/error/err_infinite_loop.w
func f(x:int){
	while (true){
		 x = x + 1
		 print(x)
	}
}
f(2)

